# duckdb-extension-framework

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.github/workflows/: release-please.yml  rust.yml
src/: bind_info.rs  config.rs  connection.rs  constants.rs  data_chunk.rs  database.rs  defs.rs  duckly.rs  function_info.rs  init_info.rs  lib.rs  logical_type.rs  replacement_scan.rs  scalar_function.rs  table_function.rs  test_integration.rs  value.rs  vector.rs  wrapper.c  wrapper.cpp  wrapper.h  wrapper.hpp
src/table_functions/: bind_info.rs  function_info.rs  init_info.rs  mod.rs  replacement_scan.rs  table_function.rs  test_integration.rs
