[package]
name = "duckdb-extension-framework"
version = "0.4.1"
edition = "2021"
description = "Purely experimental DuckDB extension framework"
license-file = "LICENSE"
documentation = "https://docs.rs/duckdb-extension-framework"
homepage = "https://github.com/Mause/duckdb-extension-framework"
repository = "https://github.com/Mause/duckdb-extension-framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
statically_linked = []

[dependencies]
num-traits = "0.2.15"
num-derive = "0.3.3"
cxx = "1.0.81"
autocxx = "0.23.1"

[build-dependencies]
autocxx-build = "0.23.1"
bindgen = "0.61.0"
build_script = "0.2.0"
miette = { version= "5.4.1", features=['fancy'] }
